[gd_scene load_steps=17 format=2]

[ext_resource path="res://Box.tscn" type="PackedScene" id=1]
[ext_resource path="res://bars/Bars.gd" type="Script" id=2]
[ext_resource path="res://bars/Bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://obstacles/Axe.tscn" type="PackedScene" id=4]
[ext_resource path="res://ObstacleManager.gd" type="Script" id=5]
[ext_resource path="res://SongManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://test.ogg" type="AudioStream" id=7]
[ext_resource path="res://backgrounds/Background.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Level.gd" type="Script" id=9]
[ext_resource path="res://scenes/menus/Settings.tscn" type="PackedScene" id=10]
[ext_resource path="res://bars/EmptyBar.tscn" type="PackedScene" id=13]
[ext_resource path="res://obstacles/Cannon.tscn" type="PackedScene" id=14]
[ext_resource path="res://obstacles/Door.tscn" type="PackedScene" id=15]
[ext_resource path="res://bars/AnimatedBar.tscn" type="PackedScene" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 400 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75.5, 136.5 )

[node name="Level" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" parent="." instance=ExtResource( 8 )]

[node name="Box" parent="." instance=ExtResource( 1 )]
position = Vector2( -800, -24 )
z_index = -1

[node name="Leading" parent="." instance=ExtResource( 3 )]
position = Vector2( -1600, 0 )
scale = Vector2( 2, 1 )

[node name="Bars" type="Node2D" parent="."]
script = ExtResource( 2 )
bars = [ null, ExtResource( 13 ), ExtResource( 13 ), null, null, null, null, null, null, null, null, ExtResource( 13 ), ExtResource( 13 ), null, null, null, null, ExtResource( 13 ), null, null, null, null, null, null, null, null, null, null, null, null, ExtResource( 13 ), null, null, null, null, null, null, null, null, ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), null, null, null, ExtResource( 13 ), null, null, null ]

[node name="Platforms" type="Node2D" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 600, -120 )
scale = Vector2( 0.25, 1 )

[node name="Platform2" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 1000, -240 )
scale = Vector2( 0.5, 1 )

[node name="Platform3" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 1600, -360 )
scale = Vector2( 0.5, 1 )

[node name="Platform4" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 3400, -80 )
scale = Vector2( 0.1, 2 )

[node name="Platform9" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 11800, -80 )
scale = Vector2( 0.1, 2 )

[node name="Platform5" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 9200, -80 )
scale = Vector2( 0.1, 1 )

[node name="Platform6" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 9600, -210 )
scale = Vector2( 0.1, 1 )

[node name="Platform7" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 10000, -320 )
scale = Vector2( 0.15, 1 )

[node name="Platform11" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 16800, -122 )
scale = Vector2( 0.1, 1 )

[node name="Platform12" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 17200, -252 )
scale = Vector2( 0.1, 1 )

[node name="Platform25" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 38600, -140 )
scale = Vector2( 0.1, 1 )

[node name="Platform26" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 39000, -270 )
scale = Vector2( 0.1, 1 )

[node name="Platform13" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 17600, -362 )
scale = Vector2( 0.15, 1 )

[node name="Platform8" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 10800, -260 )
scale = Vector2( 0.06, 1 )

[node name="Platform10" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 15160, -400 )
scale = Vector2( 0.1, 1 )

[node name="Platform14" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 19600, -80 )
scale = Vector2( 0.1, 2 )

[node name="Platform15" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 22800, -100 )
scale = Vector2( 0.1, 2 )

[node name="Platform16" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 23800, -140 )
scale = Vector2( 0.2, 4 )

[node name="Platform18" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 29200, -140 )
scale = Vector2( 0.2, 4 )

[node name="Platform19" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 33800, -140 )
scale = Vector2( 0.2, 4 )

[node name="Platform20" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 34300, -140 )
scale = Vector2( 0.2, 4 )

[node name="Platform21" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 35500, -140 )
scale = Vector2( 0.2, 4 )

[node name="Platform22" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 34900, -140 )
scale = Vector2( 0.2, 4 )

[node name="Platform17" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 24400, -160 )
scale = Vector2( 0.1, 2 )

[node name="Platform23" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 36759, -399 )
scale = Vector2( 0.1, 1 )

[node name="Platform24" parent="Platforms" instance=ExtResource( 3 )]
position = Vector2( 37759, -397 )
scale = Vector2( 0.1, 1 )

[node name="Obstacles" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Cannon2" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 6370, -22 )
rotation = 1.5708
distance = 300.0

[node name="Cannon" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 4400, 0 )
distance = 900.0

[node name="Axe" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 2400, -600 )

[node name="Door" parent="Obstacles" instance=ExtResource( 15 )]
position = Vector2( 5400, 0 )

[node name="Door2" parent="Obstacles" instance=ExtResource( 15 )]
position = Vector2( 12600, 0 )
start_offset = 0.5

[node name="Door3" parent="Obstacles" instance=ExtResource( 15 )]
position = Vector2( 12800, 0 )
start_offset = 0.25

[node name="Door4" parent="Obstacles" instance=ExtResource( 15 )]
position = Vector2( 13000, 0 )

[node name="Door5" parent="Obstacles" instance=ExtResource( 15 )]
position = Vector2( 26010, 0 )
start_offset = 0.5

[node name="Door6" parent="Obstacles" instance=ExtResource( 15 )]
position = Vector2( 26210, 0 )
start_offset = 0.25

[node name="Door7" parent="Obstacles" instance=ExtResource( 15 )]
position = Vector2( 26410, 0 )

[node name="Axe2" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 7600, -280 )

[node name="Axe3" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 8400, -280 )

[node name="Cannon3" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 10805, -260 )
distance = 670.0
duration = 1.0

[node name="AnimatedBar" parent="Obstacles" instance=ExtResource( 16 )]
position = Vector2( 13800, 0 )
scale = Vector2( 0.5, 1 )
distance = 300.0
duration = 2.0

[node name="Cannon4" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 15000, -30 )
rotation = 1.5708
distance = 300.0

[node name="Cannon5" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 15231, -332 )
rotation = -1.5708
distance = 300.0

[node name="Cannon7" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 15231, -332 )
rotation = -1.5708
distance = 300.0

[node name="Cannon6" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 15570, -31 )
rotation = 1.5708
distance = 300.0

[node name="Axe4" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 18800, -280 )

[node name="Cannon8" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 20600, 0 )
distance = 900.0

[node name="Cannon9" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 21400, -60 )
rotation = 3.14159
distance = 1370.0

[node name="Cannon10" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 30800, 0 )
distance = 1370.0

[node name="Axe5" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 27200, -280 )

[node name="Axe6" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 28000, -280 )

[node name="Axe7" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 28600, -280 )

[node name="AnimatedBar2" parent="Obstacles" instance=ExtResource( 16 )]
position = Vector2( 31400, 0 )
scale = Vector2( 0.5, 1 )
distance = 300.0
duration = 2.0

[node name="AnimatedBar3" parent="Obstacles" instance=ExtResource( 16 )]
position = Vector2( 32200, 0 )
scale = Vector2( 0.5, 1 )
distance = 300.0
duration = 2.0

[node name="AnimatedBar4" parent="Obstacles" instance=ExtResource( 16 )]
position = Vector2( 33000, 0 )
scale = Vector2( 0.5, 1 )
distance = 300.0
duration = 2.0

[node name="Axe8" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 36400, -280 )

[node name="Cannon11" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 36830, -331 )
rotation = -1.5708
distance = 300.0

[node name="Cannon12" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 37169, -30 )
rotation = 1.5708
distance = 300.0

[node name="Cannon13" parent="Obstacles" instance=ExtResource( 14 )]
position = Vector2( 37830, -329 )
rotation = -1.5708
distance = 300.0

[node name="SongTrigger" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SongTrigger"]
position = Vector2( 10, 0 )
shape = SubResource( 1 )

[node name="FinishTrigger" type="Area2D" parent="."]
position = Vector2( 40000, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishTrigger"]
position = Vector2( 75.5, -136.5 )
shape = SubResource( 2 )

[node name="SongManager" parent="." instance=ExtResource( 6 )]
song = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -634, -15 )

[node name="Pause" type="PanelContainer" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.5
margin_top = -93.0
margin_right = 99.5
margin_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Pause"]
margin_left = 7.0
margin_top = 7.0
margin_right = 192.0
margin_bottom = 189.0
custom_constants/margin_top = 12
custom_constants/margin_bottom = 12

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Pause/MarginContainer"]
margin_top = 12.0
margin_right = 185.0
margin_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer"]
margin_right = 185.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer"]
margin_top = 30.0
margin_right = 185.0
margin_bottom = 158.0
custom_constants/margin_right = 24
custom_constants/margin_left = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 24.0
margin_right = 161.0
margin_bottom = 128.0
custom_constants/separation = 8

[node name="Resume" type="Button" parent="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 137.0
margin_bottom = 20.0
size_flags_vertical = 2
text = "Resume"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 137.0
margin_bottom = 32.0

[node name="Reset" type="Button" parent="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 137.0
margin_bottom = 60.0
size_flags_vertical = 2
text = "Restart"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 137.0
margin_bottom = 72.0

[node name="Settings" type="Button" parent="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 137.0
margin_bottom = 100.0
size_flags_vertical = 2
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 137.0
margin_bottom = 128.0
size_flags_vertical = 2
text = "Quit"

[node name="GameOver" type="PanelContainer" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.5
margin_top = -93.0
margin_right = 99.5
margin_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/GameOver"]
margin_left = 7.0
margin_top = 7.0
margin_right = 192.0
margin_bottom = 179.0
custom_constants/margin_top = 12
custom_constants/margin_bottom = 12

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/GameOver/MarginContainer"]
margin_top = 12.0
margin_right = 185.0
margin_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/GameOver/MarginContainer/HBoxContainer"]
margin_top = 35.0
margin_right = 185.0
margin_bottom = 49.0
text = "Game Over"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/GameOver/MarginContainer/HBoxContainer"]
margin_top = 65.0
margin_right = 185.0
margin_bottom = 113.0
custom_constants/margin_right = 24
custom_constants/margin_left = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/GameOver/MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 24.0
margin_right = 161.0
margin_bottom = 48.0
custom_constants/separation = 8

[node name="Reset" type="Button" parent="CanvasLayer/Control/GameOver/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 137.0
margin_bottom = 20.0
size_flags_vertical = 2
text = "Restart"

[node name="Quit" type="Button" parent="CanvasLayer/Control/GameOver/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 137.0
margin_bottom = 48.0
size_flags_vertical = 2
text = "Quit"

[node name="Winner" type="PanelContainer" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.5
margin_top = -93.0
margin_right = 99.5
margin_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Winner"]
margin_left = 7.0
margin_top = 7.0
margin_right = 192.0
margin_bottom = 179.0
custom_constants/margin_top = 12
custom_constants/margin_bottom = 12

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Winner/MarginContainer"]
margin_top = 12.0
margin_right = 185.0
margin_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/Winner/MarginContainer/HBoxContainer"]
margin_top = 35.0
margin_right = 185.0
margin_bottom = 49.0
text = "Level Complete!"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Winner/MarginContainer/HBoxContainer"]
margin_top = 65.0
margin_right = 185.0
margin_bottom = 113.0
custom_constants/margin_right = 24
custom_constants/margin_left = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Winner/MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 24.0
margin_right = 161.0
margin_bottom = 48.0
custom_constants/separation = 8

[node name="Reset" type="Button" parent="CanvasLayer/Control/Winner/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 137.0
margin_bottom = 20.0
size_flags_vertical = 2
text = "Restart"

[node name="Quit" type="Button" parent="CanvasLayer/Control/Winner/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 137.0
margin_bottom = 48.0
size_flags_vertical = 2
text = "Quit"

[node name="Settings" parent="CanvasLayer/Control" instance=ExtResource( 10 )]
visible = false

[connection signal="end_dialation" from="Box" to="Obstacles" method="_on_Box_end_dialation"]
[connection signal="end_dialation" from="Box" to="SongManager" method="_on_end_dialation"]
[connection signal="game_over" from="Box" to="." method="_on_game_over"]
[connection signal="start_dialation" from="Box" to="Obstacles" method="_on_Box_start_dialation"]
[connection signal="start_dialation" from="Box" to="SongManager" method="_on_start_dialation"]
[connection signal="body_entered" from="SongTrigger" to="SongManager" method="_on_song_started"]
[connection signal="body_entered" from="FinishTrigger" to="." method="_on_finish"]
[connection signal="pressed" from="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Pause/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/GameOver/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/GameOver/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Winner/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Winner/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="back_pressed" from="CanvasLayer/Control/Settings" to="." method="_on_Settings_back_pressed"]
